force-app/main/default/objects/Phase_Tracker__c/fields/Total_FY_26_27__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_26_27__c</fullName>
    <formula>Cofunding_Total_FY_2627__c /  Parent_Tracker__r.Cofunding_Total_FY_2627__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-Funding in FY 26/27</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>