force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_A_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_A_A__c</fullName>
    <formula>AA_Grant_Project_Total__c +  A_A_Co_funding_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>