force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Capital_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Capital_Costs__c</fullName>
    <formula>Capital_Grant_Project_Total__c +  Capital_Co_funding_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>