force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Co_funded_A_A_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Co_funded_A_A_Costs__c</fullName>
    <formula>A_A_Co_funding_Project_Total__c /  Parent_Tracker__r.A_A_Co_funding_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Co-funded A&amp;A Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>