force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Co_funded_Capital_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Co_funded_Capital_Costs__c</fullName>
    <formula>Capital_Co_funding_Total__c /  Parent_Tracker__r.Capital_Co_funding_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total Co-funded Capital Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>