force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs__c</fullName>
    <formula>Co_funding_Project_Total__c +  Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>