force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Costs_Minus_LCH_20k_per__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs_Minus_LCH_20k_per__c</fullName>
    <formula>Total_Project_Costs__c -  (LCH_On_Gas_Incentive_Homes__c * 20000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Costs - On-Gas LCH (20k per home)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>