force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Costs_Variance_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Costs_Variance_Number__c</fullName>
    <formula>Total_Project_Costs__c -  Parent_Tracker__r.Total_Project_Costs__c</formula>
    <label>Total Project Costs Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>