force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Grant__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Grant__c</fullName>
    <formula>Total_Project_Grant_Capital_Minus_LCH__c - (20000 *  LCH_On_Gas_Incentive_Homes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Costs Minus On-Gas LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>