force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Grant_Capital_Minus_LCH__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Grant_Capital_Minus_LCH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Grant Capital Minus LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>