force-app/main/default/objects/Phase_Tracker__c/fields/Total_Project_Grant_Cumulative_Percentag__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Grant_Cumulative_Percentag__c</fullName>
    <formula>Grant_Project_Total__c /  Parent_Tracker__r.Grant_Project_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Grant Cumulative %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>