force-app/main/default/objects/Phase_Tracker__c/fields/Within_Base_Cost_Cap__c.field-meta.xml
<CustomField>
    <fullName>Within_Base_Cost_Cap__c</fullName>
    <formula>IF( Capital_Grant_Project_Total__c - (20000 *  LCH_On_Gas_Incentive_Homes__c) &lt;=  Homes_Treated_x_7_500__c , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Within Base Cost Cap</label>
    <type>Text</type>
</CustomField>