force-app/main/default/objects/Phase_Tracker__c/fields/Within_Max_Grant_A_A_limit__c.field-meta.xml
<CustomField>
    <fullName>Within_Max_Grant_A_A_limit__c</fullName>
    <formula>IF(AND(A_A_Grant_Costs_Percentage__c &lt;= 0.15, A_A_Grant_Costs_Percentage__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within Max Grant A&amp;A limit?</label>
    <type>Text</type>
</CustomField>