force-app/main/default/objects/Phase_Tracker__c/recordTypes/Cumulative_Completed_Phases.recordType-meta.xml
<RecordType>
    <fullName>Cumulative_Completed_Phases</fullName>
    <active>true</active>
    <label>2. Cumulative Completed Phases</label>
</RecordType>