force-app/main/default/objects/Phase_Tracker__c/recordTypes/Cumulative_including_approved_phases.recordType-meta.xml
<RecordType>
    <fullName>Cumulative_including_approved_phases</fullName>
    <active>true</active>
    <label>3. Cumulative Including Approved Phases</label>
</RecordType>