force-app/main/default/objects/Phase_Tracker__c/recordTypes/Cumulative_Including_Submitted_Phases.recordType-meta.xml
<RecordType>
    <fullName>Cumulative_Including_Submitted_Phases</fullName>
    <active>true</active>
    <label>4. Cumulative Including Submitted Phases</label>
</RecordType>