force-app/main/default/objects/Phase_Tracker__c/recordTypes/Most_Recent_Submitted_Phase_Request.recordType-meta.xml
<RecordType>
    <fullName>Most_Recent_Submitted_Phase_Request</fullName>
    <active>true</active>
    <label>6. Most Recent Submitted Phase Request</label>
</RecordType>