force-app/main/default/objects/Phase_Tracker__c/recordTypes/Remaining_in_project.recordType-meta.xml
<RecordType>
    <fullName>Remaining_in_project</fullName>
    <active>true</active>
    <label>5. Remaining In Project</label>
</RecordType>