force-app/main/default/objects/Phase_Tracker__c/recordTypes/Total_Project_baseline.recordType-meta.xml
<RecordType>
    <fullName>Total_Project_baseline</fullName>
    <active>true</active>
    <label>1. Total Project Baseline</label>
</RecordType>