force-app/main/default/objects/Phase_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Funding_Award__c</columns>
    <columns>Parent_Tracker__c</columns>
    <columns>Last_Refreshed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>